Added tag for slepton samples

--- a/Input/Master80X_MC_Signal.ini
+++ b/Input/Master80X_MC_Signal.ini
@@ -16,7 +16,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2
+groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2 T6bbllslepton
 #from ETH via AN draft
 crosssection = 0.
 negWeightFraction = 0.
@@ -28,7 +28,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2
+groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2 T6bbllslepton
 #from ETH via AN draft
 crosssection = 0.
 negWeightFraction = 0.
@@ -40,7 +40,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2
+groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2 T6bbllslepton
 #from ETH via AN draft
 crosssection = 0.
 negWeightFraction = 0.
@@ -64,7 +64,7 @@ localdbspath = /SMS-T6bbllslepton_mSbottom-1000To1500_mLSP-120To1450_TuneCUETP8M
 #~ numevents = -1
 #~ kfactor = 1.
 #~ localevents = -1
-#~ groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2
+#~ groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2 T6bbllslepton
 #~ #from ETH via AN draft
 #~ crosssection = 0.
 #~ negWeightFraction = 0.
@@ -76,7 +76,7 @@ localdbspath = /SMS-T6bbllslepton_mSbottom-1000To1500_mLSP-120To1450_TuneCUETP8M
 #~ numevents = -1
 #~ kfactor = 1.
 #~ localevents = -1
-#~ groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2
+#~ groups = MC CMSSW80X at13TeV Aachen Signal aMCatNLO Spring16 at25ns MiniAODv2 T6bbllslepton
 #~ #from ETH via AN draft
 #~ crosssection = 0.
 #~ negWeightFraction = 0.
