--- a/Input/default80X.ini
+++ b/Input/default80X.ini
@@ -1,6 +1,7 @@
 [general]
 InputPath = Input/
-OutputPath = /disk1/user/schomakers/AnalysisData/
+#~ OutputPath = /disk1/user/schomakers/AnalysisData/
+OutputPath = /disk1/schomakers/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
@@ -23,7 +24,7 @@ groups = StandardModel SUSY
        CMSSW80X
        Aachen Imperial FastSim Scan CMSSM
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
-       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal TChiSlepSnu T2tt T1tttt
+       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal TChiSlepSnu T2tt T1tttt T6bbllslepton	
        at13TeV at25ns noPU
        SingleElectron DoubleElectron SingleMuon DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
        Data MC AOD RelVal MiniAODv2 ReReco
@@ -60,7 +61,8 @@ nEventsPerJob = 20000
 [80X]
 makeMETUncertainties = False
 monteCarloAvailable = True
-localdatapath = /disk1/user/$USER/LocalInput
+#~ localdatapath = /disk1/user/$USER/LocalInput
+localdatapath = /disk1/$USER/LocalInput
 #~ globalTag =  START71_V7::All
 #~ globalTag =  PRE_LS172_V15::All
 globalTag =  80X_dataRun2_v14
