Removed tons of old code, added submit scripts for 2017 data and new IDs

--- a/Input/25nsData_80X.ini
+++ b/Input/25nsData_80X.ini
@@ -6,8 +6,9 @@ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer me
 
 [crab]
 #~ lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV/Cert_271036-275783_13TeV_PromptReco_Collisions16_JSON.txt
-lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV/ReReco/Final/Cert_271036-284044_13TeV_23Sep2016ReReco_Collisions16_JSON.txt
+lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_271036-284044_13TeV_23Sep2016ReReco_Collisions16_JSON.txt
 splitting = LumiBased
+units_per_job = 100
 
 
 [80X]
