--- a/Input/25nsMC_80X.ini
+++ b/Input/25nsMC_80X.ini
@@ -6,7 +6,7 @@ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC 
 
 [crab]
 
-files_per_job = 2
+units_per_job = 3
 #~ files_per_job = 1
 splitting = FileBased
 
