--- a/Input/25nsMC_Signal_80X.ini
+++ b/Input/25nsMC_Signal_80X.ini
@@ -5,12 +5,14 @@ additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMCS
 
 [crab]
 #~ files_per_job = 1
-files_per_job = 5
+units_per_job = 5
 #~ splitting = FileBased
 splitting = EventAwareLumiBased
 
 
 [80X]
 master_list = <general|InputPath>/Master80X_MC_Signal.ini
+#globalTag = 80X_mcRun2_asymptotic_2016_miniAODv2_v1
 globalTag = 80X_mcRun2_asymptotic_2016_TrancheIV_v8
+
 #~ inputDBS = phys03
