--- a/Input/Master80X.ini
+++ b/Input/Master80X.ini
@@ -451,6 +451,11 @@ groups = AOD
 datasetpath = 
 localdbspath =
 
+[RelValData_80X]
+groups = AOD
+datasetpath = 
+localdbspath =
+
 [ReRecoEE]
 groups = AOD
 datasetpath = 
