--- a/Input/Master80X_MC_Summer16.ini
+++ b/Input/Master80X_MC_Summer16.ini
@@ -181,7 +181,7 @@ localdbspath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISumm
 #~ #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 #~ crosssection = 1.124
 #~ negWeightFraction = 0.0
-#~ datasetpath =  	/DYJetsToLL_M-5to50_HT-600toInf_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6_ext1-v1/MINIAODSIM
+#~ datasetpath =        /DYJetsToLL_M-5to50_HT-600toInf_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6_ext1-v1/MINIAODSIM
 #~ localdbspath =  /DYJetsToLL_M-5to50_HT-600toInf_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6_ext1-v1/MINIAODSIM
 
 ##### Diboson aMCatNLO
@@ -667,6 +667,17 @@ negWeightFraction = 0.0
 datasetpath =   /TTTo2L2Nu_TuneCUETP8M2_ttHtranche3_13TeV-powheg-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6-v1/MINIAODSIM
 localdbspath =  /TTTo2L2Nu_TuneCUETP8M2_ttHtranche3_13TeV-powheg-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6-v1/MINIAODSIM
 
+[TT_Powheg_Herwig_Summer16_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW80X at13TeV Aachen TT Powheg Herwig Summer16 at25ns MiniAODv2
+crosssection = 831.76
+negWeightFraction = 0.0
+datasetpath =   /TT_TuneEE5C_13TeV-powheg-herwigpp/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6-v1/MINIAODSIM
+localdbspath =  /TT_TuneEE5C_13TeV-powheg-herwigpp/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6-v1/MINIAODSIM
+
 
 #~ [TT_Dilepton_Powheg_Spring16_alphaS_25ns]
 #~ status = CREATED
@@ -684,7 +695,8 @@ localdbspath =  /TTTo2L2Nu_TuneCUETP8M2_ttHtranche3_13TeV-powheg-pythia8/RunIISu
 [TTZJets_MadGraph_Summer16_25ns]
 status = CREATED
 numevents = -1
-kfactor = 1.36
+#kfactor = 1.36
+kfactor = 1.00
 localevents = -1
 groups = MC CMSSW80X at13TeV Aachen Rare aMCatNLO Summer16 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
@@ -696,7 +708,8 @@ localdbspath =  /ttZJets_13TeV_madgraphMLM/RunIISummer16MiniAODv2-80X_mcRun2_asy
 [TTZToLLNuNu_aMCatNLO_FXFX_Summer16_25ns]
 status = CREATED
 numevents = -1
-kfactor = 1.36
+#kfactor = 1.36
+kfactor = 1.00
 localevents = -1
 groups = MC CMSSW80X at13TeV Aachen Rare aMCatNLO Summer16 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
@@ -708,7 +721,8 @@ localdbspath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISumme
 [TTZToQQ_aMCatNLO_FXFX_Summer16_25ns]
 status = CREATED
 numevents = -1
-kfactor = 1.31
+#kfactor = 1.31
+kfactor = 1.00
 localevents = -1
 groups = MC CMSSW80X at13TeV Aachen Rare aMCatNLO Summer16 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
@@ -763,8 +777,8 @@ groups = MC CMSSW80X at13TeV Aachen Rare aMCatNLO Summer16 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.0017
 negWeightFraction = 0.34
-datasetpath =  /TTGamma_Dilept_TuneCUETP8M2T4_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6-v1/MINIAODSIM
-localdbspath =  /TTGamma_Dilept_TuneCUETP8M2T4_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6-v1/MINIAODSIM
+datasetpath =  /TTGamma_Dilept_TuneCUETP8M2T4_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6-v2/MINIAODSIM
+localdbspath =  /TTGamma_Dilept_TuneCUETP8M2T4_13TeV-amcatnlo-pythia8/RunIISummer16MiniAODv2-PUMoriond17_80X_mcRun2_asymptotic_2016_TrancheIV_v6-v2/MINIAODSIM
 
 ### Rare stuff
 
@@ -953,7 +967,7 @@ groups =
 kfactor = 1.
 datasetpath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
 #~ 
-	#~ 
+        #~ 
 [T6bbllslepton_msbottom_800_mneutralino_200]
 crosssection = 0.0283338
 negWeightFraction = 0.
@@ -961,7 +975,7 @@ groups =
 kfactor = 1.
 datasetpath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
 #~ 
-	#~ 
+        #~ 
 [T6bbllslepton_msbottom_800_mneutralino_300]
 crosssection = 0.0283338
 negWeightFraction = 0.
@@ -1110,6 +1124,28 @@ groups =
 kfactor = 1.
 datasetpath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
 
+[T6bbllslepton_msbottom_1200_mneutralino_150]
+crosssection = 0.00159844
+negWeightFraction = 0.
+groups = 
+kfactor = 1.
+datasetpath = 
+
+[T6bbllslepton_msbottom_1200_mneutralino_850]
+crosssection = 0.00159844
+negWeightFraction = 0.
+groups = 
+kfactor = 1.
+datasetpath = 
+
+[T6bbllslepton_msbottom_1200_mneutralino_1100]
+crosssection = 0.00159844
+negWeightFraction = 0.
+groups = 
+kfactor = 1.
+datasetpath = 
+
+
 [T6bbllslepton_msbottom_1200_mneutralino_700]
 crosssection = 0.00159844
 negWeightFraction = 0.
@@ -1138,7 +1174,13 @@ localdbspath =
 [RelValTTbar_80X]
 groups = AOD
 datasetpath = 
-localdbspath =
+localdbspath = 
+numevents = 1
+
+[RelValWZ_80X]
+groups = AOD
+datasetpath = 
+localdbspath = 
 numevents = 1
 
 [RelValZJets_80X]
