--- a/Input/default80X.ini
+++ b/Input/default80X.ini
@@ -1,6 +1,6 @@
 [general]
 InputPath = Input/
-OutputPath = /user/teroerde/AnalysisData/
+OutputPath = /net/data_cms1b/user/teroerde/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
@@ -23,7 +23,7 @@ groups = StandardModel SUSY
        CMSSW80X
        Aachen Imperial FastSim Scan CMSSM
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
-       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal TChiSlepSnu T2tt T1tttt
+       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal TChiSlepSnu T2tt T1tttt TTBarDM Slepton
        at13TeV at25ns noPU
        SingleElectron DoubleElectron SingleMuon DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
        Data MC AOD RelVal MiniAODv2 ReReco
@@ -31,11 +31,7 @@ groups = StandardModel SUSY
 
 [crab]
 StageoutSite = T2_DE_RWTH
-#~ CrabServer = Cern
-total_number_of_lumis = -1
-lumis_per_job = 80
-events_per_job = 10000
-files_per_job = 10
+units_per_job = 100
 splitting = LumiBased
 lumi_mask = ""
 # lumi recovery / skimming
@@ -44,8 +40,7 @@ lumi_mask = ""
 publish = False
 pubDBSURL = phys03
 # all (merged)
-#~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/CSVv2_ichep.csv","/afs/cern.ch/user/c/cschomak/public/CSV_13TEV_Combined_14_7_2016.csv","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsV10_MC.db","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsV10All_DATA.db","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsFastSimMC_V1.db"]
-additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/CSVv2_Moriond17_B_H.csv","/afs/cern.ch/user/c/cschomak/public/fastsim_csvv2_ttbar_26_1_2017.csv","/afs/cern.ch/user/c/cschomak/public/Summer16_23Sep2016AllV3_DATA.db","/afs/cern.ch/user/c/cschomak/public/Summer16_23Sep2016V3_MC.db","/afs/cern.ch/user/c/cschomak/public/Spring16_25nsFastSimMC_V1.db"]
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/CSVv2_Moriond17_B_H.csv","/net/data_cms1b/user/teroerde/InputFiles/fastsim_csvv2_ttbar_26_1_2017.csv","/net/data_cms1b/user/teroerde/InputFiles/Summer16_23Sep2016AllV3_DATA.db","/net/data_cms1b/user/teroerde/InputFiles/Summer16_23Sep2016V3_MC.db","/net/data_cms1b/user/teroerde/InputFiles/Spring16_25nsFastSimMC_V1.db","/net/data_cms1b/user/teroerde/InputFiles/resolutionHistos.root"]
 
 # first json
 
@@ -58,9 +53,8 @@ nEventsPerJob = 20000
 #nEventsPerJob = 20000
 
 [80X]
-makeMETUncertainties = False
 monteCarloAvailable = True
-localdatapath = /user/$USER/LocalInput
+localdatapath = /net/data_cms1b/user/$USER/LocalInput
 #~ globalTag =  START71_V7::All
 #~ globalTag =  PRE_LS172_V15::All
 globalTag =  80X_dataRun2_v14
@@ -72,7 +66,7 @@ skimoutputfiles = SUSYPAT.root
 skimpath = <general|OutputPath>/skim53X
 analysispath = <general|OutputPath>/PAT
 localhistopath = <general|OutputPath>/PAT/Histos
-mergedhistopath = <general|OutputPath>/PAT/Histos
+mergedhistopath = <general|OutputPath>/PAT/MergedHistos
 tasksPath =  <general|InputPath>/../tasks <general|OutputPath>/tasksNewStyle
 dbsfilepath = <general|InputPath>/DBSentriesOctober09.list
 skimlogpath = <general|OutputPath>/LOG/skimming/skim53X
