Framework updates for legacy analysis

--- a/Analyzers/finalTreesNoTausMiniAOD94X.ini
+++ b/Analyzers/finalTreesNoTausMiniAOD94X.ini
@@ -2,14 +2,26 @@
 type = GenericAnalyzer
 path = SuSyAachen.DiLeptonHistograms.DiLeptonTreesFromMiniAOD_cfi
 module = DiLeptonTreesFromMiniAODNoTaus
+imports = triggerLists_cfi,metFilterLists_cfi,LeptonFullSimScaleFactorMap_cfi,BTagCalibration_cfi,BTagCalibrationReader_cfi,vertexWeights_cfi,vertexWeightsUp_cfi,vertexWeightsDown_cfi,btagEffMap_cfi 
 electrons = "<taskname>IsoElectrons"
 muons = "<taskname>IsoMuons"
 looseElectrons = "<taskname>LooseElectrons"
 looseMuons = "<taskname>LooseMuons"
-#taus = "<taskname>HpsTausAC"
 jets = "<taskname>qualityJets"
 bJets = "<taskname>qualityBJets"
 bJets35 = "<taskname>qualityBJets35"
 vertices = "<taskname>basicVertices"
 storeMetFilters = True
-metFilterNames=cms.untracked.vstring("Flag_goodVertices","Flag_globalSuperTightHalo2016Filter","Flag_HBHENoiseFilter","Flag_HBHENoiseIsoFilter","Flag_EcalDeadCellTriggerPrimitiveFilter","Flag_BadPFMuonFilter","Flag_BadChargedCandidateFilter","Flag_eeBadScFilter","Flag_ecalBadCalibFilter") 
+bTagEfficiencies = bTagEffMapPars2017
+BTagCalibration = BTagCalibrationPars2017
+BTagCalibrationReader = BTagCalibrationReaderPars2017
+LeptonFullSimScaleFactors = LeptonFullSimScaleFactorMapPars2017
+vertexWeights = vertexWeightsPars2017
+vertexWeightsUp = vertexWeightsParsUp2017
+vertexWeightsDown = vertexWeightsParsDown2017
+metFilterNames=metFilterNamesData2017
+eeTriggerNames=eeTriggerNames2017
+emTriggerNames=emTriggerNames2017
+mmTriggerNames=mmTriggerNames2017
+htTriggerNames=htTriggerNames2017
+metTriggerNames=metTriggerNames2017
