--- a/CfgMerge/mergeData2017MET.ini
+++ b/CfgMerge/mergeData2017MET.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV34DileptonTriggerPFHT
-basePath = /net/data_cms1b/user/teroerde/Cleaning/data_80X_HT
+tasks = cutsV34DileptonTriggerPFMET
+basePath = /net/data_cms1b/user/teroerde/Cleaning/data_94X_MET
 MCDatasets = .*_Summer12
-outPath = /net/data_cms1b/user/teroerde/data_80X_HT
+outPath = /net/data_cms1b/user/teroerde/processedTrees/data_94X_MET
 counterSum = True
 
-[dileptonTree:cutsV34DileptonTriggerPFHT]
+[dileptonTree:cutsV34DileptonTriggerPFMET94X]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*TriggerPFHT*
@@ -32,9 +32,11 @@ type = SimpleSelector
 #~ EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1
 #~ EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))  && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2
 #~ MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2
-EEExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 && ( HLT_PFHT125_v > 0 || HLT_PFHT200_v > 0 || HLT_PFHT250_v > 0 || HLT_PFHT300_v > 0 || HLT_PFHT350_v > 0 || HLT_PFHT400_v > 0 || HLT_PFHT475_v > 0 || HLT_PFHT600_v > 0 || HLT_PFHT650_v > 0 || HLT_PFHT800_v > 0 || HLT_PFHT900_v > 0)
-EMuExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 && ( HLT_PFHT125_v > 0 || HLT_PFHT200_v > 0 || HLT_PFHT250_v > 0 || HLT_PFHT300_v > 0 || HLT_PFHT350_v > 0 || HLT_PFHT400_v > 0 || HLT_PFHT475_v > 0 || HLT_PFHT600_v > 0 || HLT_PFHT650_v > 0 || HLT_PFHT800_v > 0 || HLT_PFHT900_v > 0)
-MuMuExpression = miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 && ( HLT_PFHT125_v > 0 || HLT_PFHT200_v > 0 || HLT_PFHT250_v > 0 || HLT_PFHT300_v > 0 || HLT_PFHT350_v > 0 || HLT_PFHT400_v > 0 || HLT_PFHT475_v > 0 || HLT_PFHT600_v > 0 || HLT_PFHT650_v > 0 || HLT_PFHT800_v > 0 || HLT_PFHT900_v > 0)
+EEExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 && ( triggerSummaryMET > 0 )
+EMuExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 && ( triggerSummaryMET > 0 )
+MuMuExpression = miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 && ( triggerSummaryMET > 0 )
+
+
 
 #~ [treeProcessor:CSCHaloFilter]
 #~ type = EventFilter
@@ -42,7 +44,7 @@ MuMuExpression = miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 && ( HLT_PFHT125
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
-listPath = events.highPt
+listPath = events.highPt/HT
 EEProcessors = highPtSelector
 EMuProcessors = highPtSelector
 MuMuProcessors = highPtSelector
