--- a/Input/2016Data_94X.ini
+++ b/Input/2016Data_94X.ini
@@ -2,7 +2,7 @@
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
 #~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducer metProducerMiniAOD
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer metProducerMiniAOD prefireWeightProducer
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer|16 metProducerMiniAOD|16 prefireWeightProducer|16
 
 [crab]
 #~ lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV/Cert_271036-275783_13TeV_PromptReco_Collisions16_JSON.txt
@@ -10,8 +10,7 @@ lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_271036-284044_13TeV_23
 splitting = LumiBased
 units_per_job = 100
 
-
-[80X]
-master_list = <general|InputPath>/Master80X.ini
+[94X]
+master_list = <general|InputPath>/Master94X_2016.ini
 #~ globalTag = 74X_dataRun2_Prompt_v2
-globalTag = 80X_dataRun2_2016SeptRepro_v7
+globalTag = 94X_dataRun2_v10
