--- a/Input/2016MC_94X.ini
+++ b/Input/2016MC_94X.ini
@@ -1,7 +1,7 @@
 [general]
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC prefireWeightProducer 
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC|16 metProducerMiniAODMC|16 prefireWeightProducer|16
 #~ additionalProducers = EventCountProducer electronMVAProducer 
 
 [crab]
@@ -11,5 +11,5 @@ units_per_job = 3
 splitting = FileBased
 
 [94X]
-master_list = <general|InputPath>/Master94X_MC.ini
-globalTag = 94X_mc2017_realistic_v17
+master_list = <general|InputPath>/Master94X_2016_MC.ini
+globalTag = 94X_mcRun2_asymptotic_v3
