--- a/Input/25nsMC_80X.ini
+++ b/Input/25nsMC_80X.ini
@@ -1,7 +1,7 @@
 [general]
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC prefireWeightProducer
 #~ additionalProducers = EventCountProducer electronMVAProducer 
 
 [crab]
