--- a/Input/Master94X_2017.ini
+++ b/Input/Master94X_2017.ini
@@ -220,6 +220,61 @@ negWeightFraction = 0.
 datasetpath =  /JetHT/Run2017F-31Mar2018-v1/MINIAOD
 localdbspath = /JetHT/Run2017F-31Mar2018-v1/MINIAOD
 
+[MET_Run2017B]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW94X at13TeV Aachen at25ns MET Run2017B
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MET/Run2017B-31Mar2018-v1/MINIAOD
+localdbspath = /MET/Run2017B-31Mar2018-v1/MINIAOD
+
+[MET_Run2017C]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW94X at13TeV Aachen at25ns MET Run2017C
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MET/Run2017C-31Mar2018-v1/MINIAOD
+localdbspath = /MET/Run2017C-31Mar2018-v1/MINIAOD
+
+[MET_Run2017D]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW94X at13TeV Aachen at25ns MET Run2017D
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MET/Run2017D-31Mar2018-v1/MINIAOD
+localdbspath = /MET/Run2017D-31Mar2018-v1/MINIAOD
+
+[MET_Run2017E]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW94X at13TeV Aachen at25ns MET Run2017E
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MET/Run2017E-31Mar2018-v1/MINIAOD
+localdbspath = /MET/Run2017E-31Mar2018-v1/MINIAOD
+
+[MET_Run2017F]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW94X at13TeV Aachen at25ns MET Run2017F
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MET/Run2017F-31Mar2018-v1/MINIAOD
+localdbspath = /MET/Run2017F-31Mar2018-v1/MINIAOD
+
 
 [SynchFiles]
 groups = AOD
