--- a/Input/default80X.ini
+++ b/Input/default80X.ini
@@ -40,7 +40,7 @@ lumi_mask = ""
 publish = False
 pubDBSURL = phys03
 # all (merged)
-additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/CSVv2_Moriond17_B_H.csv","/net/data_cms1b/user/teroerde/InputFiles/fastsim_csvv2_ttbar_26_1_2017.csv","/net/data_cms1b/user/teroerde/InputFiles/Summer16_23Sep2016AllV3_DATA.db","/net/data_cms1b/user/teroerde/InputFiles/Summer16_23Sep2016V3_MC.db","/net/data_cms1b/user/teroerde/InputFiles/Spring16_25nsFastSimMC_V1.db","/net/data_cms1b/user/teroerde/InputFiles/resolutionHistos.root"]
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/CSVv2_Moriond17_B_H.csv","/net/data_cms1b/user/teroerde/InputFiles/fastsim_csvv2_ttbar_26_1_2017.csv","/net/data_cms1b/user/teroerde/InputFiles/Summer16_23Sep2016AllV3_DATA.db","/net/data_cms1b/user/teroerde/InputFiles/Summer16_23Sep2016V3_MC.db","/net/data_cms1b/user/teroerde/InputFiles/Spring16_25nsFastSimMC_V1.db"]
 
 # first json
 
