--- a/Analyzers/finalTreesNoTausMiniAODMC94X.ini
+++ b/Analyzers/finalTreesNoTausMiniAODMC94X.ini
@@ -2,15 +2,30 @@
 type = GenericAnalyzer
 path = SuSyAachen.DiLeptonHistograms.DiLeptonTreesFromMiniAOD_cfi
 module = DiLeptonTreesFromMiniAODNoTaus
+imports = triggerLists,metFilterLists,LeptonFullSimScaleFactorMap,BTagCalibration,BTagCalibrationReader,vertexWeights,vertexWeightsUp,vertexWeightsDown,btagEffMap,isolationFunctor
+#electrons = "<taskname>d0Electrons"
 electrons = "<taskname>IsoElectrons"
+#muons = "<taskname>d0Muons"
 muons = "<taskname>IsoMuons"
 looseElectrons = "<taskname>LooseElectrons"
 looseMuons = "<taskname>LooseMuons"
-#taus = "<taskname>HpsTausAC"
 jets = "<taskname>qualityJets"
 bJets = "<taskname>qualityBJets"
 bJets35 = "<taskname>qualityBJets35"
 vertices = "<taskname>basicVertices"
 storeMetFilters = True
-metFilterNames=cms.untracked.vstring("Flag_goodVertices","Flag_globalSuperTightHalo2016Filter","Flag_HBHENoiseFilter","Flag_HBHENoiseIsoFilter","Flag_EcalDeadCellTriggerPrimitiveFilter","Flag_BadPFMuonFilter","Flag_BadChargedCandidateFilter","Flag_ecalBadCalibFilter")
+bTagEfficiencies = bTagEffMapPars2017
+BTagCalibration = BTagCalibrationPars2017
+BTagCalibrationReader = BTagCalibrationReaderPars2017
+LeptonFullSimScaleFactors = LeptonFullSimScaleFactorMapPars2017
+vertexWeights = vertexWeightsPars2017
+vertexWeightsUp = vertexWeightsParsUp2017
+vertexWeightsDown = vertexWeightsParsDown2017
+isolationDefinitions = isolationDefinitions2017
+metFilterNames=metFilterNamesFullSim2017
+eeTriggerNames=eeTriggerNames2017
+emTriggerNames=emTriggerNames2017
+mmTriggerNames=mmTriggerNames2017
+htTriggerNames=htTriggerNames2017
+metTriggerNames=metTriggerNames2017
 
