--- a/Input/25nsData_94X.ini
+++ b/Input/25nsData_94X.ini
@@ -2,7 +2,7 @@
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
 #~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducer metProducerMiniAOD
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer metProducerMiniAOD
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer metProducerMiniAOD prefireWeightProducer
 
 [crab]
 #~ lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV/Cert_271036-275783_13TeV_PromptReco_Collisions16_JSON.txt
@@ -15,4 +15,4 @@ units_per_job = 100
 master_list = <general|InputPath>/Master94X.ini
 #~ globalTag = 74X_dataRun2_Prompt_v2
 #globalTag = 80X_dataRun2_2016SeptRepro_v7
-globalTag = 94X_dataRun2_ReReco_EOY17_v6
+globalTag = 94X_dataRun2_v11
