--- a/Input/25nsMC_Signal_80X.ini
+++ b/Input/25nsMC_Signal_80X.ini
@@ -1,13 +1,13 @@
 [general]
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMCSignal metProducerMiniAOD_MCSignal
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMCSignal metProducerMiniAOD_MCSignal prefireWeightProducer
 
 [crab]
 #~ files_per_job = 1
 units_per_job = 5
 #~ splitting = FileBased
-splitting = EventAwareLumiBased
+splitting = FileBased
 
 
 [80X]
@@ -15,4 +15,4 @@ master_list = <general|InputPath>/Master80X_MC_Signal.ini
 #globalTag = 80X_mcRun2_asymptotic_2016_miniAODv2_v1
 globalTag = 80X_mcRun2_asymptotic_2016_TrancheIV_v8
 
-#~ inputDBS = phys03
+#inputDBS = phys03
