--- a/Input/default94X.ini
+++ b/Input/default94X.ini
@@ -31,7 +31,7 @@ splitting = LumiBased
 lumi_mask = ""
 publish = False
 pubDBSURL = phys03
-additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/CSVv2_94XSF_V2_B_F.csv","/net/data_cms1b/user/teroerde/InputFiles/fastsim_csvv2_ttbar_26_1_2017.csv","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017BCDEF_V6_DATA.db","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V8_MC.db"]
+additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_94XSF_V3_B_F.csv","/net/data_cms1b/user/teroerde/InputFiles/fastsim_csvv2_ttbar_26_1_2017.csv","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_DATA.db","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_MC.db"]
 
 
 [94X]
@@ -49,4 +49,4 @@ histogramstoragepath = <general|SitePath>/mteroerd/data/Histos
 histogramoutputpath = <general|SiteOutputPath>/mteroerd/data/Histos
 cmsstoragepath = <general|SitePath>
 storage_element= grid-srm.physik.rwth-aachen.de
-master_list = <general|InputPath>/Master94X.ini
+master_list = <general|InputPath>/Master94X_2017.ini
