Included new selections for 2018, configuration mixes, and updated task and analyzer names. Also new master lists

--- a/Analyzers/trees2018MC102X.ini
+++ b/Analyzers/trees2018MC102X.ini
@@ -14,19 +14,20 @@ bJets = "<taskname>qualityBJets"
 bJets35 = "<taskname>qualityBJets35"
 isoTracks = "<taskname>basicIsolatedTracks"
 vertices = "<taskname>basicVertices"
+met = cms.InputTag("slimmedMETs", "", "Analysis")
 storeMetFilters = True
-bTagEfficiencies = bTagEffMapPars2017
-BTagCalibration = BTagCalibrationPars2017
-BTagCalibrationReader = BTagCalibrationReaderPars2017
-LeptonFullSimScaleFactors = LeptonFullSimScaleFactorMapPars2017
-vertexWeights = vertexWeightsPars2017
-vertexWeightsUp = vertexWeightsParsUp2017
-vertexWeightsDown = vertexWeightsParsDown2017
-isolationDefinitions = isolationDefinitions2017
-metFilterNames=metFilterNamesFullSim2017
-eeTriggerNames=eeTriggerNames2017
-emTriggerNames=emTriggerNames2017
-mmTriggerNames=mmTriggerNames2017
-htTriggerNames=htTriggerNames2017
-metTriggerNames=metTriggerNames2017
+bTagEfficiencies = bTagEffMapPars2018
+BTagCalibration = BTagCalibrationPars2018
+BTagCalibrationReader = BTagCalibrationReaderPars2018
+LeptonFullSimScaleFactors = LeptonFullSimScaleFactorMapPars2018
+vertexWeights = vertexWeightsPars2018
+vertexWeightsUp = vertexWeightsParsUp2018
+vertexWeightsDown = vertexWeightsParsDown2018
+isolationDefinitions = isolationDefinitions2018
+metFilterNames=metFilterNamesFullSim2018
+eeTriggerNames=eeTriggerNames2018
+emTriggerNames=emTriggerNames2018
+mmTriggerNames=mmTriggerNames2018
+htTriggerNames=htTriggerNames2018
+metTriggerNames=metTriggerNames2018
 
