--- a/Input/Master80X_MC_Summer16.ini
+++ b/Input/Master80X_MC_Summer16.ini
@@ -1082,6 +1082,13 @@ groups =
 kfactor = 1.
 datasetpath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
 
+[T6bbllslepton_msbottom_1000_mneutralino_200]
+crosssection = 0.00615134
+negWeightFraction = 0.
+groups = 
+kfactor = 1.
+datasetpath = /SMS-T6bbllslepton_mSbottom-800To950_mLSP-150To900_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring16MiniAODv2-pLHE_PUSpring16Fast_80X_mcRun2_asymptotic_2016_miniAODv2_v0-v1/MINIAODSIM
+
 [T6bbllslepton_msbottom_1000_mneutralino_250]
 crosssection = 0.00615134
 negWeightFraction = 0.
