--- a/Input/default102X.ini
+++ b/Input/default102X.ini
@@ -3,23 +3,21 @@ InputPath = Input/
 OutputPath = /net/data_cms1b/user/teroerde/AnalysisData/
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
-CSA = 94X
+CSA = 102X
 email = $USER@cern.ch
-
-
 
 makeCountHistos = True 
 additionalProducers = EventCountProducer electronMVAProducer
 
-
 groups = StandardModel SUSY
-       CMSSW94X
-       Aachen Imperial FastSim Scan CMSSM Fall17
+       CMSSW94X CMSSW102X
+       Aachen Imperial FastSim Scan CMSSM Fall17 Summer18 Autumn18
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
        TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan Signal TChiSlepSnu T6bbllslepton
        at13TeV at25ns noPU
-       SingleElectron DoubleElectron SingleMuon DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
-       Data MC AOD RelVal MiniAODv2 ReReco
+       SingleElectron DoubleElectron SingleMuon DoubleMu HT MuEG MET 
+       Data MC AOD RelVal MiniAOD MiniAODv2 MiniAODv3 ReReco
+       Run2018A Run2018B Run2018C Run2018D
        Run2017B Run2017C Run2017D Run2017E Run2017F
        Run2016B Run2016C Run2016D Run2016E Run2016F Run2016G Run2016H
        
@@ -33,7 +31,7 @@ pubDBSURL = phys03
 additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_94XSF_V3_B_F.csv","/net/data_cms1b/user/teroerde/InputFiles/fastsim_csvv2_ttbar_26_1_2017.csv","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_DATA.db","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_MC.db"]
 
 
-[94X]
+[102X]
 monteCarloAvailable = True
 localdatapath = /net/data_cms1b/user/$USER/LocalInput
 globalTag =  94X_dataRun2_ReReco_EOY17_v6
@@ -48,4 +46,4 @@ histogramstoragepath = <general|SitePath>/mteroerd/data/Histos
 histogramoutputpath = <general|SiteOutputPath>/mteroerd/data/Histos
 cmsstoragepath = <general|SitePath>
 storage_element= grid-srm.physik.rwth-aachen.de
-master_list = <general|InputPath>/Master94X_2017.ini
+master_list = <general|InputPath>/Master102X_2018.ini
