--- a/Input/Master102X_2018_MC.ini
+++ b/Input/Master102X_2018_MC.ini
@@ -1,22 +1,22 @@
 ##### Drell--Yan Madgraph
 
-[AStar_MadGraph_Fall18_25ns] 
+[AStar_MadGraph_Autumn18_25ns] 
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW102X at13TeV Aachen DrellYan Madgraph Fall18 at25ns MiniAOD
+groups = MC CMSSW102X at13TeV Aachen DrellYan Madgraph Autumn18 at25ns MiniAOD
 #https://twiki.cern.ch/twiki/bin/view/CMS/SummaryTable1G25ns
 crosssection = 18610
 negWeightFraction = 0
 datasetpath = /DYJetsToLL_M-10to50_TuneCP5_13TeV-madgraphMLM-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v2/MINIAODSIM
 
-[ZJets_MadGraph_Fall18_25ns] 
+[ZJets_MadGraph_Autumn18_25ns] 
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW102X at13TeV Aachen DrellYan Madgraph Fall18 at25ns MiniAOD
+groups = MC CMSSW102X at13TeV Aachen DrellYan Madgraph Autumn18 at25ns MiniAOD
 #https://twiki.cern.ch/twiki/bin/view/CMS/SummaryTable1G25ns
 crosssection = 5765.4
 negWeightFraction = 0
@@ -206,12 +206,12 @@ negWeightFraction = 0.0
 datasetpath =  /ST_t-channel_top_4f_InclusiveDecays_TuneCP5_13TeV-powheg-madspin-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
-[ST_antitop_tWChannel_5f_Powheg_Spring16_25ns]
+[ST_antitop_tWChannel_5f_Powheg_Autumn18_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW102X at13TeV Aachen SingleTop Powheg Spring16 at25ns MiniAOD
+groups = MC CMSSW102X at13TeV Aachen SingleTop Powheg Autumn18 at25ns MiniAOD
 #
 crosssection = 11.7
 negWeightFraction = 0.0
