Changes to resubmitter, updates to master lists, propagating changes to signal postprocessor (won 't change performance there

--- a/Input/2017Data_102X.ini
+++ b/Input/2017Data_102X.ini
@@ -3,8 +3,8 @@ additionalProducers = EventCountProducer electronMVAProducer|17 corrJetsProducer
 
 [crab]
 lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_294927-306462_13TeV_EOY2017ReReco_Collisions17_JSON_v1.txt
-splitting = LumiBased
-units_per_job = 100
+splitting = Automatic
+units_per_job = 80
 
 
 [102X]
