--- a/Input/2018Data_102X.ini
+++ b/Input/2018Data_102X.ini
@@ -3,8 +3,8 @@ additionalProducers = EventCountProducer electronMVAProducer|18 corrJetsProducer
 
 [crab]
 lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_314472-325175_13TeV_PromptReco_Collisions18_JSON.txt
-splitting = LumiBased
-units_per_job = 100
+splitting = Automatic
+units_per_job = 80
 additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_102XSF_V1.csv"]
 
 
