--- a/Input/Master80X_MC_Summer16.ini
+++ b/Input/Master80X_MC_Summer16.ini
@@ -1153,6 +1153,20 @@ kfactor = 1.
 datasetpath = 
 
 
+[T6bbllslepton_msbottom_1200_mneutralino_150]
+crosssection = 0.00159844
+negWeightFraction = 0.
+groups = 
+kfactor = 1.
+datasetpath = 
+
+[T6bbllslepton_msbottom_1200_mneutralino_400]
+crosssection = 0.00159844
+negWeightFraction = 0.
+groups = 
+kfactor = 1.
+datasetpath = 
+
 [T6bbllslepton_msbottom_1200_mneutralino_700]
 crosssection = 0.00159844
 negWeightFraction = 0.
