--- a/Mix/mc2017.ini
+++ b/Mix/mc2017.ini
@@ -1,11 +1,10 @@
 [default]
-analyzers = Analyzers/trees2017MC102X.ini
-configs = Input/default102X.ini Input/2017MC_102X.ini
+configs = Input/default102X.ini Input/2017MC_102X.ini Analyzers/trees2017MC102X.ini
 tasks = cuts2017Dilepton102X
 
 [relval]
-analyzers = Analyzers/trees2017MC102X.ini
-configs = Input/default102X.ini Input/2017MC_102X.ini
-tasks = cuts2017Dilepton102X
 job = RelValTTbar_94X
+
+[synch]
+job = 94XSynch
 
