--- a/CfgMerge/mergeData2017InclusiveRunB.ini
+++ b/CfgMerge/mergeData2017InclusiveRunB.ini
@@ -31,9 +31,9 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelector]
 type = SimpleSelector
-EEExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 && ( triggerSummary > 0)
-EMuExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 && ( triggerSummary > 0)
-MuMuExpression = miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 && ( triggerSummary > 0)
+EEExpression = ( triggerSummary > 0)
+EMuExpression =  ( triggerSummary > 0)
+MuMuExpression =  ( triggerSummary > 0)
 #~ EEExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 
 #~ EMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 
 #~ MuMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 
