--- a/Input/2016Data_102X.ini
+++ b/Input/2016Data_102X.ini
@@ -2,15 +2,15 @@
 #additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer
 # use below if JEC change. Do not forget to also change MET input-Tags in python config!
 #~ additionalProducers = EventCountProducer electronMVAProducer HBHENoiseFilterProducer corrJetsProducer metProducerMiniAOD
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer metProducerMiniAOD
-
+additionalProducers = EventCountProducer electronMVAProducer|16 corrJetsProducer|16 metProducerMiniAOD|16 prefireWeightProducer|16 ecalBadCalibFilterProducer
+ 
 [crab]
 #~ lumi_mask = /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV/Cert_271036-275783_13TeV_PromptReco_Collisions16_JSON.txt
-lumi_mask = /afs/cern.ch/user/c/cschomak/public/Cert_271036-284044_13TeV_23Sep2016ReReco_Collisions16_JSON.txt
-splitting = LumiBased
+lumi_mask = /net/data_cms1b/user/teroerde/InputFiles/Cert_271036-284044_13TeV_23Sep2016ReReco_Collisions16_JSON.txt
+splitting = Automatic
+units_per_job = 80
 
-
-[80X]
-master_list = <general|InputPath>/Master80X.ini
+[102X]
+master_list = <general|InputPath>/Master94X_2016.ini
 #~ globalTag = 74X_dataRun2_Prompt_v2
-globalTag = 80X_dataRun2_2016SeptRepro_v7
+globalTag = 94X_dataRun2_v10
