tasks and mixes for 2016/2017 102X, local jobs now store result histos in a different folder

--- a/Input/default102X.ini
+++ b/Input/default102X.ini
@@ -37,6 +37,7 @@ localdatapath = /net/data_cms1b/user/$USER/LocalInput
 globalTag =  94X_dataRun2_ReReco_EOY17_v6
 analysispath = <general|OutputPath>/PAT
 localhistopath = <general|OutputPath>/PAT/Histos
+localjobhistopath = <general|OutputPath>/PAT/TestHistos
 mergedhistopath = <general|OutputPath>/PAT/MergedHistos
 tasksPath =  <general|InputPath>/../tasks <general|OutputPath>/tasksNewStyle
 analogpath = <general|OutputPath>/LOG/analysis
