--- a/Input/default80X.ini
+++ b/Input/default80X.ini
@@ -65,6 +65,7 @@ filename = skimPAT_
 skimoutputfiles = SUSYPAT.root
 skimpath = <general|OutputPath>/skim53X
 analysispath = <general|OutputPath>/PAT
+localjobhistopath = <general|OutputPath>/PAT/TestHistos
 localhistopath = <general|OutputPath>/PAT/Histos
 mergedhistopath = <general|OutputPath>/PAT/MergedHistos
 tasksPath =  <general|InputPath>/../tasks <general|OutputPath>/tasksNewStyle
