--- a/Input/default94X.ini
+++ b/Input/default94X.ini
@@ -38,6 +38,7 @@ monteCarloAvailable = True
 localdatapath = /net/data_cms1b/user/$USER/LocalInput
 globalTag =  94X_dataRun2_ReReco_EOY17_v6
 analysispath = <general|OutputPath>/PAT
+localjobhistopath = <general|OutputPath>/PAT/TestHistos
 localhistopath = <general|OutputPath>/PAT/Histos
 mergedhistopath = <general|OutputPath>/PAT/MergedHistos
 tasksPath =  <general|InputPath>/../tasks <general|OutputPath>/tasksNewStyle
