Update on samples, merge-configs, crab tools

--- a/CfgMerge/mergeData2017InclusiveRunB.ini
+++ b/CfgMerge/mergeData2017InclusiveRunB.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV34Dilepton
-basePath = /net/data_cms1b/user/teroerde/Cleaning/data_94X_RunB
+tasks = cuts2017Dilepton
+basePath = /net/data_cms1b/user/teroerde/Cleaning/data_2017B
 MCDatasets = .*_Summer12
-outPath = /net/data_cms1b/user/teroerde/processedTrees/data_94X_Run2017B
+outPath = /net/data_cms1b/user/teroerde/processedTrees/data_2017B
 counterSum = True
 
-[dileptonTree:cutsV34Dilepton]
+[dileptonTree:cuts2017Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 #~ EEDataset = .*DoubleElectron_Run2016B*
