--- a/CfgMerge/mergeData2017InclusiveRunE.ini
+++ b/CfgMerge/mergeData2017InclusiveRunE.ini
@@ -1,11 +1,11 @@
 [general]
-tasks = cutsV34Dilepton
-basePath = /net/data_cms1b/user/teroerde/Cleaning/data_94X_RunE
+tasks = cuts2017Dilepton
+basePath = /net/data_cms1b/user/teroerde/Cleaning/data_2017E
 MCDatasets = .*_Summer12
-outPath = /net/data_cms1b/user/teroerde/processedTrees/data_94X_Run2017E
+outPath = /net/data_cms1b/user/teroerde/processedTrees/data_2017E
 counterSum = True
 
-[dileptonTree:cutsV34Dilepton]
+[dileptonTree:cuts2017Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 #~ EEDataset = .*DoubleElectron_Run2016B*
@@ -31,9 +31,9 @@ OtherSelection =
 #  -> possible only if running over trees with only tight leptons
 [treeProcessor:highPtSelector]
 type = SimpleSelector
-EEExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 && ( triggerSummary > 0)
-EMuExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 && ( triggerSummary > 0)
-MuMuExpression = miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 && ( triggerSummary > 0)
+EEExpression =  ( triggerSummary > 0)
+EMuExpression = ( triggerSummary > 0)
+MuMuExpression = ( triggerSummary > 0)
 #~ EEExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 
 #~ EMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 
 #~ MuMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 
