--- a/CfgMerge/mergeData2018B.ini
+++ b/CfgMerge/mergeData2018B.ini
@@ -1,26 +1,26 @@
 [general]
-tasks = cuts2017Dilepton
-basePath = /net/data_cms1b/user/teroerde/Cleaning/data_2017D
+tasks = cuts2018Dilepton
+basePath = /net/data_cms1b/user/teroerde/Cleaning/data_2018B
 MCDatasets = .*_Summer12
-outPath = /net/data_cms1b/user/teroerde/processedTrees/data_2017D
+outPath = /net/data_cms1b/user/teroerde/processedTrees/data_2018B
 counterSum = True
 
-[dileptonTree:cuts2017Dilepton]
+[dileptonTree:cuts2018Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 #~ EEDataset = .*DoubleElectron_Run2016B*
-EEDataset = .*on_Run2017D*
+EEDataset = .*on_Run2018B*
 EESelection = 
 EEProcessors = overlapHighPt 
 EEFilter = overlapHighPt
 
 #~ EMuDataset = .*MuEG_Run2016B*
-EMuDataset = .*Run2017D*
+EMuDataset = .*Run2018B*
 EMuSelection = 
 EMuProcessors = overlapHighPt 
 EMuFilter =  overlapHighPt
 
-MuMuDataset = .*DoubleMuon_Run2017D*
+MuMuDataset = .*DoubleMuon_Run2018B*
 MuMuSelection =  
 MuMuProcessors = overlapHighPt 
 MuMuFilter = overlapHighPt 
@@ -38,10 +38,9 @@ MuMuExpression =  ( triggerSummary > 0)
 #~ EMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 
 #~ MuMuExpression = pt1 > 20 && pt2 > 20 && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 
 
-
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
-listPath = events.highPt/run2017D
+listPath = events.highPt/run2018B
 EEProcessors = highPtSelector
 EMuProcessors = highPtSelector
 MuMuProcessors = highPtSelector
