--- a/Input/2017MC_102X.ini
+++ b/Input/2017MC_102X.ini
@@ -4,6 +4,8 @@ additionalProducers = EventCountProducer electronMVAProducer|17 corrJetsProducer
 [crab]
 units_per_job = 3
 splitting = FileBased
+#additional_input_files = ["/net/data_cms1b/user/teroerde/InputFiles/DeepCSV_94XSF_V3_B_F.csv","/net/data_cms1b/user/teroerde/InputFiles/Fall17_17Nov2017_V32_94X_MC.db"]
+
 
 [102X]
 master_list = <general|InputPath>/Master94X_2017_MC.ini
