--- a/Input/Master102X_2018_MC.ini
+++ b/Input/Master102X_2018_MC.ini
@@ -154,28 +154,28 @@ crosssection = 4.43
 negWeightFraction = 0.0
 datasetpath = /WZTo3LNu_TuneCP5_13TeV-powheg-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15_ext1-v2/MINIAODSIM
 
-#[WWTo2L2Nu_Powheg_Autumn18_25ns] # not found yet
-#status = CREATED
-#numevents = -1
-#kfactor = 1.
-#localevents = -1
+[WWTo2L2Nu_Powheg_Autumn18_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
 groups = MC CMSSW102X at13TeV Aachen Diboson Powheg Autumn18 at25ns MiniAOD
 # NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
-#crosssection = 10.481
-#negWeightFraction = 0.0
-#datasetpath = /WWTo2L2Nu_NNPDF31_TuneCP5_PSweights_13TeV-powheg-pythia8/RunIIAutumn18MiniAOD-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
+crosssection = 10.481
+negWeightFraction = 0.0
+datasetpath = /WWTo2L2Nu_NNPDF31_TuneCP5_13TeV-powheg-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
-#[WWToLNuQQ_Powheg_Autumn18_25ns] # not found yet
-#status = CREATED
-#numevents = -1
-#kfactor = 1.
-#localevents = -1
-#groups = MC CMSSW102X at13TeV Aachen Diboson Powheg Autumn18 at25ns MiniAOD
+[WWToLNuQQ_Powheg_Autumn18_25ns] # not found yet
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW102X at13TeV Aachen Diboson Powheg Autumn18 at25ns MiniAOD
 # NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
-#crosssection = 43.53
-#negWeightFraction = 0.0
-#datasetpath = /WWToLNuQQ_NNPDF31_TuneCP5_13TeV-powheg-pythia8/RunIIAutumn18MiniAOD-PU2017_12Apr2018_94X_mc2017_realistic_v14_ext1-v1/MINIAODSIM
+crosssection = 43.53
+negWeightFraction = 0.0
+datasetpath = /WWToLNuQQ_NNPDF31_TuneCP5_13TeV-powheg-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
 
@@ -304,15 +304,15 @@ negWeightFraction = 0.0
 datasetpath =  /TTJets_DiLept_TuneCP5_13TeV-madgraphMLM-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 
-#[TT_Dilepton_aMCatNLO_Autumn18_25ns] # not found yet
-#status = CREATED
-#numevents = -1
-#kfactor = 1.
-#localevents = -1
-#groups = MC CMSSW102X at13TeV Aachen TT aMCatNLO Autumn18 at25ns MiniAOD
-#crosssection = 87.31
-#negWeightFraction = 0.254
-#datasetpath =  /TT_DiLept_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-PU2017_12Apr2018_94X_mc2017_realistic_v14-v2/MINIAODSIM
+[TT_Dilepton_aMCatNLO_Autumn18_25ns] # not found yet
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW102X at13TeV Aachen TT aMCatNLO Autumn18 at25ns MiniAOD
+crosssection = 87.31
+negWeightFraction = 0.254
+datasetpath =  /TT_DiLept_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15_ext1-v2/MINIAODSIM
 
 
 #### Powheg ttbar 
@@ -374,18 +374,17 @@ crosssection = 0.2529
 negWeightFraction =  0.27
 datasetpath =  /TTZToLLNuNu_M-10_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15_ext1-v2/MINIAODSIM
 
-#[TTZToQQ_aMCatNLO_Autumn18_25ns] # not found yet
-#status = CREATED
-#numevents = -1
-##kfactor = 1.31
-#kfactor = 1.00
-#localevents = -1
-#groups = MC CMSSW102X at13TeV Aachen Rare aMCatNLO Autumn18 at25ns MiniAOD
-## NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
-#crosssection = 0.5297
-#negWeightFraction = 0.26
-#datasetpath =  /TTZToQQ_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
-#localdbspath =  /TTZToQQ_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-PU2017_12Apr2018_94X_mc2017_realistic_v14-v1/MINIAODSIM
+[TTZToQQ_aMCatNLO_Autumn18_25ns] # not found yet
+status = CREATED
+numevents = -1
+#kfactor = 1.31
+kfactor = 1.00
+localevents = -1
+groups = MC CMSSW102X at13TeV Aachen Rare aMCatNLO Autumn18 at25ns MiniAOD
+# NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.5297
+negWeightFraction = 0.26
+datasetpath =  /TTZToQQ_TuneCP5_13TeV-amcatnlo-pythia8/RunIIAutumn18MiniAOD-102X_upgrade2018_realistic_v15-v1/MINIAODSIM
 
 [TTWToLNu_aMCatNLO_FXFX_Autumn18_25ns]
 status = CREATED
