--- a/Mix/mc2017.ini
+++ b/Mix/mc2017.ini
@@ -8,3 +8,10 @@ job = RelValTTbar_94X
 [synch]
 job = 94XSynch
 
+[weights]
+configs = Input/default102X.ini Input/weightsMC2017.ini Analyzers/genWeightTrees.ini
+tasks = genWeightSum
+groups = MC
+
+[full]
+groups = MC
