--- a/CfgMerge/mergeData2018MET.ini
+++ b/CfgMerge/mergeData2018MET.ini
@@ -1,11 +1,11 @@
 [general]
 tasks = cuts2017DileptonTriggerPFMET
-basePath = /net/data_cms1b/user/teroerde/Cleaning/data_2017MET
+basePath = /net/data_cms1b/user/teroerde/Cleaning/data_2018MET
 MCDatasets = .*_Summer12
-outPath = /net/data_cms1b/user/teroerde/processedTrees/data_2017MET
+outPath = /net/data_cms1b/user/teroerde/processedTrees/data_2018MET
 counterSum = True
 
-[dileptonTree:cuts2017DileptonTriggerPFMET102X]
+[dileptonTree:cuts2018DileptonTriggerPFMET102X]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*TriggerPFHT*
@@ -32,15 +32,9 @@ type = SimpleSelector
 #~ EEExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1
 #~ EMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20))  && miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2
 #~ MuMuExpression = ((pt1 > 20 && pt2 > 10) || (pt1 > 10 && pt2 > 20)) && miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2
-EEExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.1 && ( triggerSummaryMET > 0 )
-EMuExpression = miniIsoEffArea1 < 0.1 && miniIsoEffArea2 < 0.2 && ( triggerSummaryMET > 0 )
-MuMuExpression = miniIsoEffArea1 < 0.2 && miniIsoEffArea2 < 0.2 && ( triggerSummaryMET > 0 )
-
-
-
-#~ [treeProcessor:CSCHaloFilter]
-#~ type = EventFilter
-#~ names = CfgMerge/muonBadTrack.txt CfgMerge/badResolutionTrack.txt CfgMerge/csc2015.txt CfgMerge/ecalscn1043093.txt
+EEExpression = ( triggerSummaryMET > 0 )
+EMuExpression = ( triggerSummaryMET > 0 )
+MuMuExpression = ( triggerSummaryMET > 0 )
 
 [treeProcessor:overlapHighPt]
 type = OverlapRemover
